--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-    <canvas id="background"></canvas> <!-- TODO: Add dynamic resizing -->
+    <canvas id="background"></canvas>
 
     <nav class="navbar fixed-top navbar-dark bg-dark navbar-expand-sm">
         <span class="navbar-brand">Bill Mader</span>
