Added actual content to each section.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
                     <h3>
                         About Me
                     </h3>
-                    <p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam ullam accusamus perferendis reiciendis ab sequi accusantium delectus quasi provident soluta porro, possimus officiis odit. Voluptatibus repudiandae quisquam nihil dignissimos fuga.</p>
+                    <p class="lead">Husband, Father, Software Engineer, and soccer fan of many allegiances. Born and raised in Indianapolis. Currently living in Greenwood, IN with my wife and baby boy.</p>
+                    <p class="lead">I have been playing soccer for as long as I can remember. I definitely don't play as much as I would like to anymore (and my fitness is definitely showing it), but luckily professional soccer is essentially a year-round sport. I am constantly watching soccer and cheering on my favorite teams from different leagues including: The Indy Eleven in the USL, Arsenal in the Premier League, Barcelona in La Liga, and Bayern Munich in the Bundesliga. During the international breaks I am obviously rooting for the United States, but will secondarily root for Germany for competitions that the U.S. is not in.</p>
                 </div>
             </div>
             <div class="jumbotron">
@@ -66,7 +67,14 @@
                     <h3>
                         Professional Experience
                     </h3>
-                    <p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam ullam accusamus perferendis reiciendis ab sequi accusantium delectus quasi provident soluta porro, possimus officiis odit. Voluptatibus repudiandae quisquam nihil dignissimos fuga.</p>
+                    <p class="lead">I have worked at DMI (formerly Allegient) since graduating from Rose-Hulman Institute of Technology in 2016. During my time at Allegient/DMI I have taken on many internal and client-facing projects including:</p>
+                    <ul>
+                        <li><p class="lead">A Xamarin Forms mobile app that allows businesses to easily advertise and promote their services to potential clients</p></li>
+                        <li><p class="lead">Adding a new page to a Visual Basic .NET web application for displaying training videos</p></li>
+                        <li><p class="lead">Setting up and configuring a continuous integration environment using Team City and Octopus Deploy</p></li>
+                        <li><p class="lead">Primary mainenance and enhancement of multiple Java-based web applications</p></li>
+                        <li><p class="lead">Implementing business-critical .NET core APIs as well as full-stack web applications with a Angular front-end, .NET core back-end, and a host of Azure integrations such as dynamic functions, table storage, service bus, and more.</p></li>
+                    </ul>
                 </div>
             </div>
             <div class="jumbotron">
@@ -74,7 +82,10 @@
                     <h3>
                         Links
                     </h3>
-                    <p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam ullam accusamus perferendis reiciendis ab sequi accusantium delectus quasi provident soluta porro, possimus officiis odit. Voluptatibus repudiandae quisquam nihil dignissimos fuga.</p>
+                    <div> <!-- TODO: Properly align link images. -->
+                        <a href="https://github.com/Bill-Mader"><img class="portfolio-image-link" src="./assets/GitHub-Mark.png" alt="My GitHub repos"></a>
+                        <a href="https://www.linkedin.com/in/maderwc/"><img class="portfolio-image-link" src="./assets/linkedin-logo.png" alt="My LinkedIn Page"></a>
+                    </div>
                 </div>
             </div>
         </div>
