--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <h3>
                         Links
                     </h3>
-                    <div> <!-- TODO: Properly align link images. -->
+                    <div class="portfolio-links">
                         <a href="https://github.com/Bill-Mader"><img class="portfolio-image-link" src="./assets/GitHub-Mark.png" alt="My GitHub repos"></a>
                         <a href="https://www.linkedin.com/in/maderwc/"><img class="portfolio-image-link" src="./assets/linkedin-logo.png" alt="My LinkedIn Page"></a>
                     </div>
