Added favicon and placeholder for resume download

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to my site!</title>
-    <!-- TODO: Add favicon -->  
+    <link rel="shortcut icon" type="image/png" href="assets/favicon.ico">
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -85,6 +85,7 @@
                     <div class="portfolio-links">
                         <a href="https://github.com/Bill-Mader"><img class="portfolio-image-link" src="./assets/GitHub-Mark.png" alt="My GitHub repos"></a>
                         <a href="https://www.linkedin.com/in/maderwc/"><img class="portfolio-image-link" src="./assets/linkedin-logo.png" alt="My LinkedIn Page"></a>
+                        <a href="./assets/bill-mader-resume.pdf"><img class="portfolio-image-link" src="./assets/document-image.png" alt="My Resume"></a>
                     </div>
                 </div>
             </div>
