Added firebase and updated readme

--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
                         Welcome
                     </h1>
                     <p class="lead">
-                        Welcome to my portfolio site! This is a place to get to know a little bit about me and see some
-                        examples of my work.
+                        Welcome to my site! This is a place to get to know a little bit about me and my work.
                     </p>
                 </div>
             </div>
