--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
                     <h3>
                         Professional Experience
                     </h3>
-                    <p class="lead">I have worked at DMI (formerly Allegient) since graduating from Rose-Hulman Institute of Technology in 2016. During my time at Allegient/DMI I have taken on many internal and client-facing projects including:</p>
+                    <p class="lead">I have worked at DMI (formerly Allegient) since graduating from Rose-Hulman Institute of Technology in 2016 with a degree in Software Engineering and Computer Science. During my time at Allegient/DMI I have taken on many internal and client-facing projects including:</p>
                     <ul>
-                        <li><p class="lead">A Xamarin Forms mobile app that allows businesses to easily advertise and promote their services to potential clients</p></li>
-                        <li><p class="lead">Adding a new page to a Visual Basic .NET web application for displaying training videos</p></li>
-                        <li><p class="lead">Setting up and configuring a continuous integration environment using Team City and Octopus Deploy</p></li>
-                        <li><p class="lead">Primary mainenance and enhancement of multiple Java-based web applications</p></li>
-                        <li><p class="lead">Implementing business-critical .NET core APIs as well as full-stack web applications with a Angular front-end, .NET core back-end, and a host of Azure integrations such as dynamic functions, table storage, service bus, and more.</p></li>
+                        <li><p class="lead">An Angular Single-Page Application utilizing Google Maps APIs with a focus on mobile reactivity</p></li>
+                        <li><p class="lead">Multiple different business-critical .NET Core and Node.js APIs and Azure Function applications</p></li>
+                        <li><p class="lead">Setting up and configuring a CI/CD build and release pipelines in Azure DevOps</p></li>
+                        <li><p class="lead">Working with a host of Azure integrations such as Dynamic Functions, Table Storage, Service Bus, KeyVault, and more.</p></li>
+                        <li><p class="lead">Dabbling with popular technologies such as GraphQL and React Native</p></li>
                     </ul>
                 </div>
             </div>
