Update description and resume

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                     <h3>
                         About Me
                     </h3>
-                    <p class="lead">Husband, Father, Software Engineer, and soccer fan of many allegiances. Born and raised in Indianapolis. Currently living in Greenwood, IN with my wife and baby boy.</p>
-                    <p class="lead">I have been playing soccer for as long as I can remember. I definitely don't play as much as I would like to anymore (and my fitness is definitely showing it), but luckily professional soccer is essentially a year-round sport. I am constantly watching soccer and cheering on my favorite teams from different leagues including: The Indy Eleven in the USL, Arsenal in the Premier League, Barcelona in La Liga, and Bayern Munich in the Bundesliga. During the international breaks I am obviously rooting for the United States, but will secondarily root for Germany for competitions that the U.S. is not in.</p>
+                    <p class="lead">Husband, Father, Software Engineer, and die-hard Arsenal FC supporter. Born and raised in Indianapolis. Currently living in Greenwood, IN with my wife and little boy.</p>
+                    <p class="lead">When I'm not spending quality time with my family, you can find me playing video games and cheering on my favorite soccer team Arsenal FC and our local boys in blue the Indy Eleven.</p>
                 </div>
             </div>
             <div class="jumbotron">
@@ -71,8 +71,8 @@
                         <li><p class="lead">An Angular Single-Page Application utilizing Google Maps APIs with a focus on mobile reactivity</p></li>
                         <li><p class="lead">Multiple different business-critical .NET Core and Node.js APIs and Azure Function applications</p></li>
                         <li><p class="lead">Setting up and configuring a CI/CD build and release pipelines in Azure DevOps</p></li>
-                        <li><p class="lead">Working with a host of Azure integrations such as Dynamic Functions, Table Storage, Service Bus, KeyVault, and more.</p></li>
-                        <li><p class="lead">Dabbling with popular technologies such as GraphQL and React Native</p></li>
+                        <li><p class="lead">Implementing applications leveraging a host of Azure services such as Dynamic Functions, Table Storage, Service Bus, KeyVault, and more.</p></li>
+                        <li><p class="lead">Working with popular technologies such as GraphQL and React Native</p></li>
                     </ul>
                 </div>
             </div>
@@ -83,7 +83,7 @@
                     </h3>
                     <div class="portfolio-links">
                         <a href="https://github.com/Bill-Mader"><img class="portfolio-image-link" src="./assets/GitHub-Mark.png" alt="My GitHub repos"></a>
-                        <a href="https://www.linkedin.com/in/maderwc/"><img class="portfolio-image-link" src="./assets/linkedin-logo.png" alt="My LinkedIn Page"></a>
+                        <a href="https://www.linkedin.com/in/bill-mader/"><img class="portfolio-image-link" src="./assets/linkedin-logo.png" alt="My LinkedIn Page"></a>
                         <a href="./assets/bill-mader-resume.pdf"><img class="portfolio-image-link" src="./assets/document-image.png" alt="My Resume"></a>
                     </div>
                 </div>
